# comp-math-lab2

./: Cargo.toml  README.md  architecture.md  avr-unknown-gnu-atmega328.json  notes.md
.cargo/: config.toml
.helix/: languages.toml
arduino/.cargo/: config.toml
arduino/.helix/: languages.toml
arduino/src/: interrupts.rs  lazy.rs  main.rs  ring_buffer.rs  system_of_equations.rs
arduino/src/equations/: chord_method.rs  secant_method.rs  simple_iteration_method.rs
avr-libc/libc/stdio/: vfprintf.c
avr-libc/libc/stdlib/: dtostre.c
avr-libc/libm/fplib/: exp.S  floor.S  fmod.S  fp_arccos.S  frexp.S  hypot.S  isnan.S  log10.S  lrint.S  lround.S  modf.S  sin.S  square.S  tan.S  trunc.S
avr-std-stub/src/: stubs.rs
daemon/: Cargo.toml
daemon/src/: function_plot.rs  main.rs  serial_port_thread.rs
libc/: .gitignore  Cargo.toml  build.rs
libc/avr-libc/: configure.ac
libc/avr-libc/include/: math.h
libc/avr-libc/libc/stdio/: vfscanf.c
libc/avr-libc/libm/fplib/: acos.S  asin.S  atan.S  atan2.S  cbrt.S  ceil.S  copysign.S  cos.S  cosh.S  fdim.S  fma.S  fmax.S  fmin.S  isfinite.S  isinf.S  ldexp.S  log.S  pow.S  round.S  signbit.S  sinh.S  tanh.S
methods/non-linear-equataion-system/: Cargo.toml
methods/non-linear-equataion-system/src/: main.rs  newton_method.rs
protocol/src/: lib.rs  point.rs
protocol/src/request/: equation_mode.rs  payloads.rs
ruduino/src/cores/: atmega328.rs
src/: buttons.rs  byte_serializable.rs  equations.rs  function_plot.rs  interrupt.rs  lazy.rs  lib.rs  main.rs  mutex.rs  point.rs  protocol_handler.rs  request.rs  response.rs  ring_buffer.rs  serial_port_thread.rs  stubs.rs  system_of_equations.rs  usart.rs
src/equations/: chord_method.rs  secant_method.rs  simple_iteration_method.rs
src/request/: equation_mode.rs  payloads.rs  selection.rs
src/request/equation_mode/: compute_method.rs
