[workspace]
members = [
  ".",
  "./core_generator",
]

[package]
name = "ruduino"
version = "0.4.0"
edition = "2018"
authors = [
  "The AVR-Rust Project Developers",
  "Jake Goulding <jake.goulding@gmail.com>",
  "Dylan McKay <me@dylanmckay.io>",
]

license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/avr-rust/ruduino"
description = """
Reusable components for AVR microcontrollers
"""

keywords = ["avr", "arduino", "uno"]

[features]
default = ["avr-std-stub"]
all-mcus = []

[dependencies]
avr-config = { version = "2.0", features = ["cpu-frequency"] }
avr_delay = { git = "https://github.com/avr-rust/delay", rev = "849918a8dfb2" }
avr-std-stub = { version = "1.0", optional = true }
const_env--value = "0.1"
target-cpu-macro = "0.1"

[build-dependencies]
avr-mcu = "0.3"

[package.metadata.docs.rs]
all-features = true # we specifically want to enable 'all-mcus' for documentation

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
  'cfg(avr_mcu_atmega48)',
  'cfg(avr_mcu_atmega88)',
  'cfg(avr_mcu_atmega48a)',
  'cfg(avr_mcu_atmega168a)',
  'cfg(avr_mcu_atmega88p)',
  'cfg(avr_mcu_atmega168p)',
  'cfg(avr_mcu_atmega88pa)',
  'cfg(avr_mcu_atmega168)',
  'cfg(avr_mcu_atmega328p)',
  'cfg(avr_mcu_atmega48pa)',
  'cfg(avr_mcu_atmega168pa)',
  'cfg(avr_mcu_atmega48p)',
  'cfg(avr_mcu_atmega328)',
  'cfg(avr_mcu_atmega328)',
  'cfg(avr_mcu_atmega88a)',
  'cfg(avr_mcu_atmega48)'
]


