[package]
name = "daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.12.1", features = ["canvas", "tokio"] }
iced_aw = { version = "0.8.0", default-features = false, features = ["tabs"] }
plotters = "0.3.5"
protocol = { path = "../protocol" }
tokio-serial = "5.4.4"
tokio = { version = "1.38.0", features = ["full"] }
plotters-iced = "0.10.0"
